# Liquidity-forecaster

./: .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  PRODUCT_SPEC.md  README.md  expected_inflows.example.json  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  forecast.yml  secret-scan.yml
api/: compute.py  forecast.py
app/: globals.css  layout.tsx  page.tsx
app/access-denied/: page.tsx
app/api/forecast/: route.ts
docs/: 01-overview.md  02-data-and-accounts.md  03-forecast.md  04-alerting.md  05-architecture.md  06-security.md  07-roadmap.md  08-dashboard.md  SECRETS.md
lib/: access.test.ts  access.ts  db.ts
reference/: folio-api.json
src/liquidity_forecaster/: __init__.py  alerting.py  baseline.py  cli.py  config.py  folio_client.py  forecast.py  inflows.py  logging_setup.py  models.py  money.py  pipeline.py  publish.py  serialize.py  store.py  web.py
src/liquidity_forecaster/notify/: __init__.py  email_fallback.py  message.py  slack.py
tests/: fixtures.py  test_alerting.py  test_config.py  test_dashboard.py  test_folio_client.py  test_forecast.py  test_money.py  test_notify.py  test_phase2.py
